--- a/background.html
+++ b/background.html
@@ -2,7 +2,7 @@
 <head>
 	<script>
 		// ---- CHECK UPDATE ----//
-		var major = 2;
+		var major = 1;
 		var minor = 1;
 		if (localStorage["major"] == undefined) {
 			localStorage["major"] = 0;
@@ -22,26 +22,26 @@
 		// ---- END CHECK UPDATE ----//
 
 		//---- TALK TO ICON ----//
-		chrome.tabs.onUpdated.addListener(checkForGcal);
+		chrome.tabs.onUpdated.addListener(checkForFbook);
 
-		function checkForGcal(tabId, changeInfo, tab) {
+		function checkForFbook(tabId, changeInfo, tab) {
 			if (localStorage["uncheckedUpdate"] == "true") {
 				chrome.pageAction.setIcon({tabId: tab.id, path: "img/icons/icon19_update.png"});
-				chrome.pageAction.setTitle({tabId: tab.id, title:"Minimalist for Google Reader has been updated! Click to dismiss."});
+				chrome.pageAction.setTitle({tabId: tab.id, title: "Minimalist for Facebook has been updated! Click to dismiss."});
 			} else {
 				chrome.pageAction.setIcon({tabId: tab.id, path: "img/icons/icon19.png"});
-				chrome.pageAction.setTitle({tabId: tab.id, title: "Minimalist for Google Reader Options"});
+				chrome.pageAction.setTitle({tabId: tab.id, title: "Minimalist for Facebook Options"});
 				localStorage["uncheckedUpdate"] = false;
 			}
 			var o = JSON.parse(localStorage["options"]);
-			if (tab.url.indexOf('google.com/reader') > -1 && !o.mricon) {
+			if (tab.url.indexOf('facebook.com') > -1 && !o.mficon) {
 				chrome.pageAction.show(tabId);
 			}
 		};
 		//---- END TALK TO ICON ----//
 
 		//---- TALK TO SCRIPTS ----//
-		var joy = true; // whether or not Minimalist for Google Reader is activated [via icon]
+		var joy = true; // whether or not Minimalist for Facebook is activated [via icon]
 		chrome.extension.onRequest.addListener(function (request, sender, sendResponse) {
 			if (request.elements == "o" && joy) {
 				sendResponse({
@@ -68,7 +68,7 @@
 				chrome.tabs.getAllInWindow(cwin, function(tabs) {
 					for (var i = 0; i < tabs.length; i++) {
 						var t = tabs[i].url;
-							if (t.match('google.com/reader')) {
+							if (t.match('facebook.com')) {
 								var tab = tabs[i];
 								chrome.tabs.update(tab.id, {url: tab.url, selected: tab.selected}, null);
 							}
@@ -77,6 +77,19 @@
 			});
 		}
 		//---- END HELPER METHODS ----//
+	</script>
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-22336317-1']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
 	</script>
 </head>
 <body>
