--- a/options.html
+++ b/options.html
@@ -315,6 +315,13 @@
 			</div>
 		</section>
 		<section>
+			<h3>Floating</h3>
+			<div>
+				<input type="checkbox" id="sF" />
+					&nbsp;<label for="sF" title="">Floating sidebar</label><br />
+			</div>
+		</section>
+		<section>
 			<h3>Other</h3>
 			<div>
 				<input type="checkbox" id="s_events" />
@@ -349,7 +356,7 @@
 				<input type="checkbox" id="zoom" />
 					&nbsp;<label for="zoom" title="">Show photo zoom on hover</label><br />
 				<input type="checkbox" id="theater" />
-					&nbsp;<label for="theater" title="">Disable theather mode</label><br />
+					&nbsp;<label for="theater" title="">Disable theater mode</label><br />
 			</div>
 		</section>
 		<section>
