--- a/options.html
+++ b/options.html
@@ -246,6 +246,8 @@
 					&nbsp;<label for="t_home" title="">Hide Home</label><br />
 				<input type="checkbox" id="t_profile" />
 					&nbsp;<label for="t_profile" title="">Hide Profile</label><br />
+				<input type="checkbox" id="t_ff" />
+					&nbsp;<label for="t_ff" title="">Hide "Find Friends"</label><br />
 			</div>
 		</section>
 	</div>
@@ -379,6 +381,10 @@
 					&nbsp;<label for="f_tr" title="">Hide Top/Recent</label><br />
 				<input type="checkbox" id="f_app" />
 					&nbsp;<label hide for="f_app" title="">Hide Applications stories</label><br />
+				<input type="checkbox" id="f_poll" />
+					&nbsp;<label hide for="f_poll" title="">Hide Poll/Questions stories</label><br />
+				<input type="checkbox" id="f_page" />
+					&nbsp;<label hide for="f_page" title="">Hide Pages stories</label><br />
 				<input type="checkbox" id="f_event" />
 					&nbsp;<label hide for="f_event" title="">Hide event stories</label><br />
 				<input type="checkbox" id="f_friend" />
@@ -547,7 +553,7 @@ undefined</textarea>
 		<section>
 			<h3>Announcements</h3>
 			<div>
-				
+				Hi Lifehackers! Just a quick update from the feedback I've gotten so far, changes below:
 			</div>
 		</section>
 		<section>
@@ -565,16 +571,19 @@ undefined</textarea>
 				<strong>Google Bar</strong>
 				<ul>
 					<li></li>
-				</ul>
-				<strong>Header</strong>
+				</ul>-->
+				<strong>Sidebar</strong>
 				<ul>
-					<li></li>
+					<li>Fixed: Pokes not hiding</li>
 				</ul>
 				<strong>Main</strong>
 				<ul>
-					<li></li>
+					<li>Added: Hide Poll/Questions stories</li>
+					<li>Added: Hide Pages stories</li>
+					<li>Fixed: Photo zoom appearing on full-size photos</li>
+					<li>Fixed: Photo zoom only applying to first page loaded</li>
 				</ul>
-				<strong>Navigation</strong>
+				<!--<strong>Navigation</strong>
 				<ul>
 					<li></li>
 				</ul>
